CIF API Change Log

Version 0.3.0
* Changed type names
  Because POSIX reserves type names ending in _t, the names of all types
  provided by the CIF API have been changed to use _tp instead.
* Provisions for recent ICU
  Versions of ICU more recent than the one against which the library was
  initially developed incorporate a change that causes a host of
  const-correctness warnings to be emitted during compilation, mostly from the
  tests.  These issues were resolved with respect to ICU 55-1 (and the code is
  still fine with respect to ICU 4.2.1).
* Building on Win32/Win64
  Updated for building as a native DLL on Windows (Win32 / Win64).  The
  MinGW-w64 toolchain was specifically targeted, but overall the changes were
  few, and the code is overall very portable, so it is likely that the result
  could be ported to other Windows toolchains with comparative ease.
* Bulding on OS X
  Not much was really needed to provide for building on OS X, but a small
  build system change cleaned up an issue encountered when relying on Fink for
  dependencies.

Version 0.2.0.3
* Bug in cif_loop_add_item()
  Fixed a bug in which cif_loop_add_item() did not correctly handle a NULL
  default value.
* Documentation of packet iterator effects
  Documentation of the possible negative effects and constraints of open
  packet iterators was added to the general packet iterator description and
  to the docs of cif_loop_get_packets().
* Fixed a narrow text-folding failure case
  The text block line-folding code used by cif_write() could produce invalid
  output because it failed to protect against lines being folded immediately
  before a semicolon (only a problem when not also prefixing).  That issue is
  now resolved.

Version 0.2.0.2
* Issues with ssize_t
  Fixed a header declaration and build configuration issue resulting in
  declarations of type ssize_t not being visible in some places where it is
  used.  Observed on Debian.
* ICU pkg-config package names